# FMCG-Newsletter-Agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_pipeline.py
src/: credibility_scorer.py  deduplicator.py  news_collector.py  newsletter_generator.py  relevance_filter.py
test_data/: FMCG acquisition merger deal buyout-us-en-true-1-10-search-qdr_y.json  ethanol-in-en-true-1-10-search-qdr_m.json  ethanol-in-en-true-1-10-search-qdr_w.json
