[project]
name = "fmcg-newsletter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.12",
    "langchain-openai>=1.3.4",
    "numpy>=2.5.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.59.1",
]
